--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.iesvdm</groupId>
-    <artifactId>pruebaclase</artifactId>
+    <artifactId>calse_jsp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>pruebaclase</name>
     <packaging>war</packaging>
